# valteh-revenue-console

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  layout.py  main.py  routes.py
app/assets/: styles.css
app/components/: filters.py  forms.py  tables.py
app/data/: database.py  repositories.py  schemas.py  seed_data.py
app/domain/: cost_engine.py  models.py  operational_events.py  pricing_simulator.py  revenue_engine.py  scenario_forecast.py  unit_economics.py
app/integrations/: ingestion.py  operational_events_client.py  saremi_api.py  sync_runner.py
app/pages/: __init__.py  client_detail.py  clients.py  costs.py  executive_dashboard.py  pricing.py  scenarios.py
app/utils/: currency.py  dates.py
data/: seed_client_subscriptions.csv  seed_clients.csv  seed_costs.csv  seed_pricing_plans.csv  seed_usage.csv
docs/: event-consumption-architecture.md  shared-operational-event-contract.md
tests/: test_client_detail.py  test_cost_engine.py  test_cost_seed.py  test_costs_page.py  test_ingestion.py  test_pricing_engine.py  test_pricing_simulator.py  test_scenario_forecast.py  test_unit_economics.py
valteh-economics-dashboard/: .env.example  Dockerfile  README.md  pyproject.toml
valteh-economics-dashboard/app/: __init__.py  config.py  layout.py  main.py
valteh-economics-dashboard/data/: seed_costs.csv  seed_pricing_plans.csv
valteh-economics-dashboard/tests/: test_pricing_engine.py
valteh-economics-dashboard/valteh_economics_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+20 files in other folders)
