[project]
name = "valteh-economics-dashboard"
version = "0.1.0"
description = "Internal economics, pricing, and business management dashboard for Valteh service lines."
requires-python = ">=3.11"
dependencies = [
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.6.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "migrations*", "tests*"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
